<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    
    <RelativeLayout
        android:id="@+id/filler1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_weight="0.25" />
    
	<RelativeLayout
	    android:id="@+id/encryptBlock"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:background="@drawable/round_rect"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp">
	    <Button
	        android:id="@+id/buttonEncrypt"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:onClick="buttonEncryptClick"
	        android:text="@string/buttonEncrypt"
	        android:background="@android:drawable/btn_default"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:enabled="false" />
	</RelativeLayout>
	    
    <RelativeLayout
        android:id="@+id/filler2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_weight="0.5" />
    
    <RelativeLayout
        android:id="@+id/decryptBlock"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:background="@drawable/round_rect"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp">
        <Button
	        android:id="@+id/buttonDecrypt"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:onClick="buttonDecryptClick"
	        android:text="@string/buttonDecrypt"
	        android:background="@android:drawable/btn_default"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:enabled="false" />
    </RelativeLayout>
    
	
    <RelativeLayout
        android:id="@+id/filler3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_weight="0.5" />
    
    <RelativeLayout
        android:id="@+id/myPicsBlock"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp"
	    android:background="@drawable/round_rect">
     	<Button
	        android:id="@+id/buttonMyPics"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:onClick="buttonMyPicturesClick"
	        android:text="@string/buttonMyPictures"
	        android:background="@android:drawable/btn_default"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:enabled="false" />
     </RelativeLayout>
        
        
     <RelativeLayout
        android:id="@+id/imageBlock"
	    android:layout_weight="1"
	    android:layout_height="150dp"
	    android:layout_width="fill_parent"
	    android:visibility="gone">
	     <ImageView 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:id="@+id/imageView"
	        android:contentDescription="@string/accessibilityImageView"
	        android:visibility="invisible" />
	     <Button
	        android:id="@+id/shareButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/shareGooglePlus"
	        android:background="@android:drawable/btn_default"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentBottom="true" />
     </RelativeLayout>
     
     
    <RelativeLayout
        android:id="@+id/filler4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_weight="0.5" />
     
     <RelativeLayout
        android:id="@+id/accountBlock"
	    android:layout_weight="0.05"
	    android:layout_height="30dp"
	    android:layout_width="fill_parent"
	    android:background="@drawable/round_rect"
	    android:clickable="true"
	    android:onClick="buttonLogoutClick"
	    android:visibility="invisible" >
	     <TextView
	         android:id="@+id/emailTextView"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignParentLeft="true"
	         android:layout_marginLeft="20dp"
	         android:textColor="#FFFFFF"
	         android:layout_centerVertical="true"
	         />
	     <TextView
	        android:id="@+id/logoutButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/buttonLogout"
	        android:textStyle="bold"
	        android:textColor="#FFFFFF"
			android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="20dp"
	        android:visibility="invisible" />
     </RelativeLayout>
</LinearLayout>